--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+glove/glove.6B.50d.txt
+glove/glove.6B.100d.txt
+glove/glove.6B.200d.txt
+glove/glove.6B.300d.txt
